; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..gfxvideo_display_server.c_video_display_server_destroy.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..gfxvideo_display_server.c_video_display_server_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i64)* }

@initial_screen_orientation = common dso_local global i64 0, align 8
@current_screen_orientation = common dso_local global i64 0, align 8
@current_display_server = common dso_local global %struct.TYPE_2__* null, align 8
@current_display_server_data = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @video_display_server_destroy() #0 {
  %1 = load i64, i64* @initial_screen_orientation, align 8
  %2 = load i64, i64* @current_screen_orientation, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i64, i64* @initial_screen_orientation, align 8
  %6 = call i32 @video_display_server_set_screen_orientation(i64 %5)
  br label %7

7:                                                ; preds = %4, %0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_display_server, align 8
  %9 = icmp ne %struct.TYPE_2__* %8, null
  br i1 %9, label %10, label %25

10:                                               ; preds = %7
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_display_server, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (i64)*, i32 (i64)** %12, align 8
  %14 = icmp ne i32 (i64)* %13, null
  br i1 %14, label %15, label %25

15:                                               ; preds = %10
  %16 = load i64, i64* @current_display_server_data, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %15
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_display_server, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32 (i64)*, i32 (i64)** %20, align 8
  %22 = load i64, i64* @current_display_server_data, align 8
  %23 = call i32 %21(i64 %22)
  br label %24

24:                                               ; preds = %18, %15
  br label %25

25:                                               ; preds = %24, %10, %7
  ret void
}

declare dso_local i32 @video_display_server_set_screen_orientation(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
